# yew-study

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html
graphql/: check.graphql  get_study_list.graphql  queries.graphql  schema.graphql
scripts/: gql_post_test.sh
src/: app.css  lib.rs  main.rs  route.rs
src/assets/: en.json  es.json
src/assets/lang/: de.json  en.json  es.json  fr.json  it.json  pt.json
src/components/: prompt.rs
src/macros/: macros.rs
src/pages/: home.rs  mod.rs  page_not_found.rs  study.rs
src/sl/: gql.rs  i18n.rs  mod.rs  study.rs
tests/: render.rs  wasm.rs
